--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([43.00416972855006, -107.58621816004285], 6.5);
-      L.tileLayer('file:////Users/maples/GitHub/Paper2Pixels/tiles/{z}/{x}/{y}.png', {
+      L.tileLayer('https://raw.githubusercontent.com/mapninja/WY_tiles/main/{z}/{x}/{y}.png', {
         minZoom: 1,
         maxZoom: 12,
         tms: false,
